KubeSphere-Yaml/kubesphere-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubesphere-system
  name: kubesphere-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.kubesphere.cn # 访问 KubeSphere Dashboard 域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ks-console
            port:
              number: 80
